BugFix(Fancytree): Fix default style

--- a/data/plugins/fancytree/less/ui.fancytree.less
+++ b/data/plugins/fancytree/less/ui.fancytree.less
@@ -22,6 +22,12 @@
 @fancy-select-color: @blue-active;
 @fancy-hover-color: @blue-disabled;
 
+
+ul.fancytree-container {
+	border: 1px solid #ccc;
+    overflow-y: scroll;
+    max-height: 400px;
+}
 /*******************************************************************************
  * Plain tree
  * Modifier classes on <ul> container:
