--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -222,6 +222,16 @@ input[type=range] {
   }
 }
 
+.upload-button-filename {
+  display: inline-block;
+  overflow: hidden;
+  text-align: left;
+  text-overflow: ellipsis;
+  vertical-align: bottom;
+  width: calc(100% - 20px);
+  white-space: nowrap;
+}
+
 ///* CUSTOM CHECKBOX & RADIO BUTTONS */
 input[type="checkbox"] {
   &.form-checkbox-control {
