BugFix(Selectize): Fix item border color

--- a/data/plugins/selectize/less/custom-selectize.less
+++ b/data/plugins/selectize/less/custom-selectize.less
@@ -7,6 +7,12 @@
   .selectize-input > div {
     box-shadow: none;
     background: @white;
+    border: 1px solid silver;
+
+    a.remove {
+      padding: 0;
+      border-left: 1px solid silver;
+    }
   }
 }
 
