BugFix(Selectize): Fix item border color

--- a/data/plugins/selectize/less/custom-selectize.less
+++ b/data/plugins/selectize/less/custom-selectize.less
@@ -8,12 +8,18 @@
     box-shadow: none;
     background: @white;
     border: 1px solid silver;
+    padding: 0 6px;
+    margin: 0 5px 3px 0;
 
     a.remove {
       padding: 0;
       border-left: 1px solid silver;
     }
   }
+}
+
+.selectize-control.plugin-remove_button [data-value] {
+  padding-right: 24px!important;
 }
 
 .has-success {
