Improvement(Sidebar): Display all menu items

--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -46,6 +46,8 @@
 @sidebar-menu-active-cell-text:         @white;
 @sidebar-menu-hover-cell-bg:            @gray-lighter;
 @sidebar-menu-hover-cell-text:          @brand-primary;
+@sidebar-menu-active-submenu-cell-bg:   @gray-96;
+@sidebar-menu-active-submenu-cell-text: @black;
 
 @sidebar-submenu-mark-color:            @brand-primary;
 @sidebar-submenu-active-cell-bg:        @brand-primary;
