--- a/data/plugins/jqgrid/less/custom-jqgrid.less
+++ b/data/plugins/jqgrid/less/custom-jqgrid.less
@@ -832,3 +832,11 @@ div.drop-actions .drop-content .dropdown-menu > li > a {
   border-top: 1px solid #fff;
 }
 
+.border-bottom-0 td {
+  border-bottom: 1px solid transparent !important;
+}
+
+.ui-jqgrid-btable .btn-group:first-child {
+  margin-left: 0;
+}
+
