Feature(Layout): Added new property for no results situation

--- a/data/plugins/jqgrid/less/custom-jqgrid.less
+++ b/data/plugins/jqgrid/less/custom-jqgrid.less
@@ -923,3 +923,15 @@ div.drop-actions .drop-content .dropdown-menu > li > a {
   display:none;
 }
 
+.ui-jqgrid.on-no-results-hide-header .ui-jqgrid-hdiv{
+  visibility: hidden;
+  height: 0;
+}
+
+.ui-jqgrid.on-no-results-hide-header {
+  box-shadow: none;
+}
+
+.ui-jqgrid.on-no-results-hide-header .alert {
+  margin: 15px 0;
+}
