Added gulp to UI KIT

--- a/data/styles/base/bootstrap.less
+++ b/data/styles/base/bootstrap.less
@@ -6,11 +6,11 @@
 
 // Core variables and mixins
 @import "variables.less";
-@import "/custom/custom-variables.less";
+@import "custom/custom-variables.less";
 @import "mixins.less";
 
 // Custom fonts
-@import "/custom/custom-fonts.less";
+@import "custom/custom-fonts.less";
 
 // Reset and dependencies
 @import "normalize.less";
@@ -57,7 +57,7 @@
 // Components w/ JavaScript
 @import "modals.less";
 @import "tooltip.less";
-@import "/custom/mod_popovers.less"; //bootstrap 4 popovers
+@import "custom/mod_popovers.less"; //bootstrap 4 popovers
 //@import "popovers.less";
 @import "carousel.less";
 
@@ -66,4 +66,4 @@
 @import "responsive-utilities.less";
 
 // Custom modules
-@import "/custom/custom-setup.less";
+@import "custom/custom-setup.less";
