Feature(Layout): Added first version of the UI KIT new template.

--- a/src/bootstrap/scss/custom-bootstrap.scss
+++ b/src/bootstrap/scss/custom-bootstrap.scss
@@ -2,6 +2,6 @@
 $body-bg: #fff;
 $body-color: #111;
 
+//get vars from node_modules/bootstrap/scss/_variables.scss
 
-
-@import "../../../node_modules/bootstrap/scss/bootstrap"
+@import "../../../node_modules/bootstrap/scss/bootstrap";
